kubernetes/.archive/ceph/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/server-snippet: |
      proxy_ssl_verify off;
spec:
  tls:
    - hosts:
        - dashboard.fluentsearch.local
      secretName: dashboard.fluentsearch.local
  rules:
    - host: dashboard.fluentsearch.local
      http:
        paths:
          - path: /ceph
            pathType: Prefix
            backend:
              service:
                name: rook-ceph-mgr-dashboard-external
                port:
                  number: 8443
